<resources>
    <string name="app_name">Solitaire chess</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="selectPuzzle">Select Puzzle</string>
    <string name="createPuzzle">Create Puzzle</string>
    <string name="quickQame">Quick Qame</string>
    <string name="puzzle">Puzzle</string>
    <string name="wasHintsUsed">Hints</string>
    <string name="wasSolved">Solved</string>
    <string name="boardWidth">Board Width</string>
    <string name="boardHeight">Board Height</string>
    <string name="chooseBoardSizeDialog">Board size dialog</string>
    <string name="hintsSwitched">Hints</string>
    <string name="cancel">Cancel</string>
    <string name="addPieceDialog">Add piece dialog</string>
    <string name="hintsTurnedOn">Hints turned</string>
    <string name="ok">Ok</string>
    <string name="windDialogHeader">Win dialog</string>
    <string name="save">Save</string>
    <string name="timeElapsedHeader">Time elapsed</string>
    <string name="menu">Menu</string>
    <string name="timeElapsedValue">Time</string>
    <string name="youWin">Congratulations you solved the puzzle</string>
    <string name="puzzle_hardness">Puzzle Hardness</string>
    <string name="negativmess">The puzzle you created has no solution. Reinvent the puzzle</string>
</resources>
