<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:orientation="vertical"
android:layout_width="match_parent"
android:layout_height="wrap_content"

android:layout_gravity="center_horizontal"
android:gravity="center_vertical|center"
android:background="@drawable/back3"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="320dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:src="@drawable/title" />

    <Button
        android:id="@+id/Button02"
        android:layout_width="170dip"
        android:layout_height="90dip"
        android:layout_marginTop="5dip"
        android:text="@string/quickQame"
        android:drawableLeft="@drawable/quickgame_icon"
        android:background="@drawable/buttonshape"
        android:paddingLeft="5dp"
        android:textSize="18sp" android:textStyle="bold" />
    <Button
        android:id="@+id/Button01"
        android:layout_width="170dip"
        android:layout_height="90dip"
        android:layout_marginTop="5dip"
        android:background="@drawable/buttonshape"
        android:text="@string/selectPuzzle"
        android:paddingLeft="5dp"
        android:drawableLeft="@drawable/icon_select"
        android:textSize="18sp" android:textStyle="bold" />
    <Button
        android:id="@+id/Button03"
        android:layout_width="170dip"
        android:layout_marginTop="5dip"
        android:layout_height="90dip"
        android:background="@drawable/buttonshape"
        android:drawableLeft="@drawable/setting"
        android:text="@string/settings"
        android:paddingLeft="5dp"
        android:textSize="18sp" android:textStyle="bold" />
    <Button
        android:id="@+id/Button04"
        android:layout_width="170dip"
        android:layout_marginTop="5dip"
        android:layout_height="90dip"
        android:drawableLeft="@drawable/icon_edit"
        android:text="@string/createPuzzle"
        android:background="@drawable/buttonshape"
        android:textSize="18sp" android:textStyle="bold" />
</LinearLayout>
