<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    android:orientation="horizontal"
    android:background="@color/backgroundcolorDark"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/boardNameLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/puzzle"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"/>
    <TextView
        android:id="@+id/boardName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingLeft="7dp"
        android:paddingTop="5dp"/>
    <TextView
        android:id="@+id/wasSolvedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/wasSolved"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"/>
    <ImageView
        android:id="@+id/wasSolved"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"

        />
    <TextView
        android:id="@+id/wasHintsUsedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:paddingLeft="7dp"
        android:text="@string/wasHintsUsed"
        android:paddingTop="5dp"/>
    <ImageView
        android:id="@+id/wasHintsUsed"
        android:paddingLeft="7dp"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        />
</LinearLayout>