<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/dialog_shape">

    <LinearLayout
        android:orientation="horizontal" android:layout_width="fill_parent"
        android:paddingLeft="10dp"
        android:layout_marginTop="0dp"
        android:paddingTop="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/choose_board_size_title_shape">
        <TextView
            android:id="@+id/chooseSettingsTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/windDialogHeader"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/windInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/youWin"
        android:textSize="16sp"
        android:paddingBottom="5dp"
        android:paddingLeft="5dp"
        />
    <TextView
        android:id="@+id/timeElapsedHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:paddingBottom="5dp"
        android:text="@string/timeElapsedHeader"
        android:paddingLeft="2dp"
        />
    <LinearLayout
        android:id="@+id/LinearLayout02"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/okButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:drawableTop="@drawable/forrward_icon"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Ok" />
        <Button
            android:id="@+id/goBackMenuButton"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:drawableTop="@drawable/cancel_icon"
            android:text="Menu" />
    </LinearLayout>

</LinearLayout>